--- a/src/base/_Color.sass
+++ b/src/base/_Color.sass
@@ -3,7 +3,7 @@
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
 
 $initial: #fff
-$primary: #6959ff
+$primary: #536dfe
 $secondary: #8f979e
 $tertiary: #f4f5f6
 $quaternary: #d1d1d1
@@ -27,14 +27,14 @@ $turquoise: #1fc8db
 $yellow: #fce473
 
 $dark: $midnight-gray
-$dark-invert: findColorInvert($dark)
+$dark-invert: find-color-invert($dark)
 
-$primary-invert: findColorInvert($primary)
+$primary-invert: find-color-invert($primary)
 $info: $blue
-$info-invert: findColorInvert($info)
+$info-invert: find-color-invert($info)
 $success: $green
-$success-invert: findColorInvert($success)
+$success-invert: find-color-invert($success)
 $warning: $yellow
-$warning-invert: findColorInvert($warning)
+$warning-invert: find-color-invert($warning)
 $danger: $red
-$danger-invert: findColorInvert($danger)
+$danger-invert: find-color-invert($danger)
