--- a/src/ghast.sass
+++ b/src/ghast.sass
@@ -2,15 +2,13 @@
 // Sass Modules
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
 
-// Reset all the properties for a clean slate.
-@import 'base/reset'
 
 // Important functions to be used in other files.
 @import 'utilities/functions'
 
 // Import core components.
 @import 'base/color'
-@import 'base/settings'
+@import 'base/variables'
 @import 'base/mixins'
 
 // Import all components.
