--- a/src/utilities/_Utility.sass
+++ b/src/utilities/_Utility.sass
@@ -4,69 +4,69 @@
 
 // Display
 
-.is-block
+.block
   display: block
 
-.is-inline
+.inline
   display: inline
 
-.is-flex
+.flex
   display: flex
 
 // Float
 
-.is-clearfix
+.clearfix
   +clearfix
 
-.is-pulled-left
+.pull-left
   float: left
 
-.is-pulled-right
+.pull-right
   float: right
 
 // Overlay
 
-.is-overlay
+.overlay
   +overlay
 
 // Size
 
-.is-fullwidth
+.fullwidth
   width: 100%
 
 // Text
 
-.is-text-centered
+.text-centered
   text-align: center
 
-.is-text-left
+.text-left
   text-align: left
 
-.is-text-right
+.text-right
   text-align: right
 
 // Visibility
 
-.is-hidden-mobile
+.hidden-mobile
   +media(mobile)
     display: none !important
 
-.is-hidden-tablet
+.hidden-tablet
   +media(tablet)
     display: none !important
 
-.is-hidden-touch
+.hidden-touch
   +media(touch)
     display: none !important
 
-.is-hidden-desktop
+.hidden-desktop
   +media(desktop)
     display: none !important
 
 // Other
 
-.is-disabled
+.disabled
   pointer-events: none
 
-.is-marginless
+.marginless
   margin: 0 !important
