--- a/src/components/_Blockquote.sass
+++ b/src/components/_Blockquote.sass
@@ -3,11 +3,11 @@
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
 
 blockquote
-  border-left: 0.5rem solid $quaternary
+  +media(mobile)
+    border-left: .3rem solid $quaternary
+    margin-left: 0
+    padding: 1rem 1.5rem
+  border-left: .5rem solid $quaternary
   margin-left: -2.25rem
   margin-right: 0
   padding: 1rem 0 1rem 1.75rem
-  +media(mobile)
-    border-left: 0.3rem solid $quaternary
-    margin-left: 0
-    padding: 1rem 1.5rem
