--- a/src/components/_Button.sass
+++ b/src/components/_Button.sass
@@ -7,73 +7,62 @@ button,
 input[type='button'],
 input[type='reset'],
 input[type='submit']
-	background-color: $primary
-	border: .1rem solid $primary
+	background-color: $gray
+	border: .1rem solid
+  border-color: $gray
 	border-radius: $global-radius
-	color: $initial
-	cursor: pointer
+	color: $gray
+  cursor: pointer
 	display: inline-block
 	font-size: 1.1rem
 	font-weight: 700
 	height: 3.8rem
 	letter-spacing: .1rem
 	line-height: 3.8rem
-	padding: 0 3.0rem
-	text-align: center
-	text-decoration: none
-	text-transform: uppercase
+  opacity: 1
+  padding: 0 3rem
+  text-align: center
+  text-decoration: none
+  text-transform: uppercase
 	white-space: nowrap
 
 	&:hover,
 	&:focus
-		background-color: $secondary
+		background-color: $gray
 		border-color: transparent
-		color: $initial
+		color: $gray
 		outline: 0
 
 	&.disabled,
 	&[disabled]
+    cursor: default
 		opacity: .5
-		cursor: default
 
 		&:hover,
 		&:focus
-			background-color: $primary
-			border-color: $primary
+			background-color: $gray-light
+			border-color: $gray-light
 
 	&.outline
-		color: $primary
-		background-color: transparent
+    background-color: transparent
+		color: inherit
 
 		&:hover,
 		&:focus
-			color: $secondary
-			background-color: transparentize($secondary, 0.9)
-			border-color: $secondary
-
-		&.button-disabled,
-		&[disabled]
-			&:hover,
-			&:focus
-				color: $primary
-				border-color: inherit
+      background-color: transparentize($gray, .9)
+      border-color: inherit
+			color: inherit
 
 	&.clear
-		color: $primary
-		background-color: transparent
-		border-color: transparent
+    background-color: transparent
+    border-color: transparent
+		color: $gray
 
 		&:hover,
 		&:focus
-			color: $secondary
-			background-color: transparentize($secondary, 0.9)
-			border-color: transparent
-
-		&.disabled,
-		&[disabled]
-			&:hover,
-			&:focus
-				color: $primary
+      background-color: transparentize($gray, .9)
+      border-color: transparent
+			color: inherit
 
 	@each $name, $pair in $colors
     $color: nth($pair, 1)
@@ -107,4 +96,4 @@ input[type='submit']
           border-color: $color-invert
           color: $color-invert
           &:hover
-            background: rgba(black, 0.05)
+            background: transparentize($black, .5)
