--- a/src/base/_Color.sass
+++ b/src/base/_Color.sass
@@ -2,39 +2,31 @@
 // Color
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
 
-$initial: #fff
-$primary: #536dfe
-$secondary: #8f979e
-$tertiary: #f4f5f6
-$quaternary: #d1d1d1
-
 $gray-darker: #111
 $gray-dark: #333
 $gray: #444
 $gray-light: #666
 $gray-lighter: #999
-$midnight-gray: #606c76
+$gray-lightest: #d1d1d1
 
 $black: #0a0a0a
-$white: #fff
-$offwhite: #fafafa
+$white: #ffffff
+$faded: #fafafa
 $blue: #42afe3
 $green: #97cd76
-$orange: #f68b39
 $purple: #847bb9
 $red: #ed6c63
-$turquoise: #1fc8db
 $yellow: #fce473
 
-$dark: $midnight-gray
-$dark-invert: find-color-invert($dark)
+$initial: #ffffff
+$primary: #536dfe
+$secondary: #8f979e
+$tertiary: #f4f5f6
+$quaternary: #d1d1d1
 
+$dark-invert: find-color-invert($gray-dark)
 $primary-invert: find-color-invert($primary)
-$info: $blue
-$info-invert: find-color-invert($info)
-$success: $green
-$success-invert: find-color-invert($success)
-$warning: $yellow
-$warning-invert: find-color-invert($warning)
-$danger: $red
-$danger-invert: find-color-invert($danger)
+$blue-invert: find-color-invert($blue)
+$green-invert: find-color-invert($green)
+$yellow-invert: find-color-invert($yellow)
+$red-invert: find-color-invert($red)
