--- a/src/components/_Button.sass
+++ b/src/components/_Button.sass
@@ -64,6 +64,8 @@ input[type='submit']
       border-color: transparent
 			color: inherit
 
+
+  // Set styles for each colors defined in _Variables.sass
 	@each $name, $pair in $colors
     $color: nth($pair, 1)
     $color-invert: nth($pair, 2)
