--- a/src/utilities/_Functions.sass
+++ b/src/utilities/_Functions.sass
@@ -1,3 +1,4 @@
+// Finds power number
 @function powerNumber($number, $exp)
   $value: 1
   @if $exp > 0
@@ -21,14 +22,8 @@
     $color-rgb: map-merge($color-rgb, ($name: $value))
   @return (map-get($color-rgb, 'red') * .2126) + (map-get($color-rgb, 'green') * .7152) + (map-get($color-rgb, 'blue') * .0722)
 
-@function closestEvenNumber($number)
-  @if ($number % 2 == 0px)
-    @return $number
-  @else
-    @return ($number + 1px)
-
 @function findColorInvert($color)
   @if (colorLuminance($color) > 0.8)
     @return rgba($black, 0.5)
   @else
-    @return $tertiary
+    @return $gray-lighter
