--- a/src/components/_Titles.sass
+++ b/src/components/_Titles.sass
@@ -41,7 +41,7 @@
     border-radius: $global-radius
     display: inline-block
     font-size: 1rem
-    padding: 0.2rem 0.3rem
+    padding: .2rem .3rem
     vertical-align: top
   & + .text
     margin-top: 2rem
