--- a/src/components/_Code.sass
+++ b/src/components/_Code.sass
@@ -3,15 +3,15 @@
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
 
 code
-	background: $tertiary
+	background: $gray-light
 	border-radius: $global-radius
 	font-size: 86%
-	padding: .2rem .5rem
 	margin: 0 .2rem
+	padding: .2rem .5rem
 	white-space: nowrap
 
 pre
-	background: $tertiary
+	background: $gray-light
 	border-left: .3rem solid $primary
 	border-radius: $global-radius
 	font-family: $monospace-font-family
