--- a/src/components/_Media.sass
+++ b/src/components/_Media.sass
@@ -6,7 +6,7 @@
   height: 3.2rem
   line-height: 2.4rem
   min-width: 3.2rem
-  padding: 0.4rem 0.8rem
+  padding: .4rem .8rem
   text-align: center
   vertical-align: top
   +media(mobile)
@@ -31,23 +31,19 @@
   .content:not(:last-child)
     margin-bottom: 1rem
   .media
-    border-top: 0.1rem solid rgba($quaternary, 0.5)
+    border-top: .1rem solid rgba($gray-lightest, .5)
     display: flex
     padding-top: 1rem
-    /*.textarea
-      +control-small*/
-    /*.button
-      +button-small*/
     .content:not(:last-child),
     .control:not(:last-child)
-      margin-bottom: 0.5rem
+      margin-bottom: .5rem
     .media
       font-size: 1.2rem
-      padding-top: 0.5rem
+      padding-top: .5rem
       & + .media
-        margin-top: 0.5rem
+        margin-top: .5rem
   & + .media
-    border-top: 0.1rem solid rgba($quaternary, 0.5)
+    border-top: .1rem solid rgba($gray-lightest, .5)
     margin-top: 1rem
     padding-top: 1rem
   &.is-large
