--- a/src/ghast.sass
+++ b/src/ghast.sass
@@ -21,6 +21,7 @@
 @import 'components/button'
 @import 'components/card'
 @import 'components/code'
+@import 'components/dropdown'
 @import 'components/footer'
 @import 'components/form'
 @import 'components/header'
