--- a/src/utilities/_Functions.sass
+++ b/src/utilities/_Functions.sass
@@ -14,7 +14,7 @@
   @each $name, $value in $color-rgb
     $adjusted: 0
     $value: $value / 255
-    @if $value < 0.03928
+    @if $value < .03928
       $value: $value / 12.92
     @else
       $value: ($value + .055) / 1.055
@@ -23,7 +23,7 @@
   @return (map-get($color-rgb, 'red') * .2126) + (map-get($color-rgb, 'green') * .7152) + (map-get($color-rgb, 'blue') * .0722)
 
 @function findColorInvert($color)
-  @if (colorLuminance($color) > 0.8)
-    @return rgba($black, 0.5)
+  @if (colorLuminance($color) > .8)
+    @return rgba($black, .5)
   @else
     @return $gray-lighter
