WIP Dropdown & misc

--- a/src/base/_Variables.sass
+++ b/src/base/_Variables.sass
@@ -15,11 +15,11 @@ $global-width: 64.5rem
 $global-lineheight: 1.65
 $global-radius: .3rem
 
-$body-background-color: $offwhite
+$body-background-color: $white
 $body-font-family: 'Noto Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif
 $monospace-font-family: 'Menlo', 'Consolas', 'Bitstream Vera Sans Mono', 'DejaVu Sans Mono', 'Monaco', monospace
 $body-antialiased: true
-$colors: (dark: ($dark, $dark-invert), primary: ($primary, $primary-invert), info: ($info, $info-invert), success: ($success, $success-invert), warning: ($warning, $warning-invert), danger: ($danger, $danger-invert))
+$colors: (dark: ($gray-dark, $dark-invert), primary: ($primary, $primary-invert), info: ($blue, $blue-invert), success: ($green, $green-invert), warning: ($yellow, $yellow-invert), danger: ($red, $red-invert))
 $body-font-color: $gray
 
 
