--- a/src/components/_Code.sass
+++ b/src/components/_Code.sass
@@ -3,7 +3,7 @@
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
 
 code
-	background: $gray-light
+	background: $gray-lightest
 	border-radius: $global-radius
 	font-size: 86%
 	margin: 0 .2rem
@@ -11,7 +11,7 @@ code
 	white-space: nowrap
 
 pre
-	background: $gray-light
+	background: $faded
 	border-left: .3rem solid $primary
 	border-radius: $global-radius
 	font-family: $monospace-font-family
