--- a/src/components/_Dropdown.sass
+++ b/src/components/_Dropdown.sass
@@ -2,23 +2,20 @@
 // ---------
 
 .dropdown
-  position: relative
-  display: inline-block
   cursor: pointer
-  &:hover .dropdown-content
-    display: block
 
 .dropdown-content
   display: none
   position: absolute
+  top: 3.5rem
+  left: 0
   background-color: $initial
   min-width: 16rem
   border: .1rem solid $gray-lightest
-  border-top: 0
-  border-radius:  0 0 $global-radius $global-radius
-  box-shadow: 0 .4rem 1rem 0 rgba(0,0,0,.2)
+  border-radius:  $global-radius
+  box-shadow: 0 .4rem 1rem 0 rgba(0,0,0,.1)
   a
-    color: $gray
+    color: $gray-lightest
     padding: 1rem 1.6rem
     font-size: 1.2rem
     text-decoration: none
@@ -26,5 +23,7 @@
     &:last-child
       border-radius:  0 0 $global-radius $global-radius
     &:hover
-      background-color: $primary
-      color: $initial
+      color: $primary
+
+.show
+  display: block
