--- a/src/utilities/_Functions.sass
+++ b/src/utilities/_Functions.sass
@@ -22,8 +22,8 @@
     $color-rgb: map-merge($color-rgb, ($name: $value))
   @return (map-get($color-rgb, 'red') * .2126) + (map-get($color-rgb, 'green') * .7152) + (map-get($color-rgb, 'blue') * .0722)
 
-@function findColorInvert($color)
+@function find-color-invert($color)
   @if (colorLuminance($color) > .8)
     @return rgba($black, .5)
   @else
-    @return $gray-lighter
+    @return $initial
