More wip dropdowns

--- a/src/base/_Variables.sass
+++ b/src/base/_Variables.sass
@@ -19,7 +19,7 @@ $body-background-color: $white
 $body-font-family: 'Noto Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif
 $monospace-font-family: 'Menlo', 'Consolas', 'Bitstream Vera Sans Mono', 'DejaVu Sans Mono', 'Monaco', monospace
 $body-antialiased: true
-$colors: (dark: ($gray-dark, $dark-invert), primary: ($primary, $primary-invert), info: ($blue, $blue-invert), success: ($green, $green-invert), warning: ($yellow, $yellow-invert), danger: ($red, $red-invert))
+$colors: (dark: ($gray-dark, $dark-invert), primary: ($primary, $primary-invert), blue: ($blue, $blue-invert), green: ($green, $green-invert), yellow: ($yellow, $yellow-invert), red: ($red, $red-invert))
 $body-font-color: $gray
 
 
