--- a/src/components/_Dropdown.sass
+++ b/src/components/_Dropdown.sass
@@ -5,25 +5,35 @@
   cursor: pointer
 
 .dropdown-content
-  display: none
+  visibility: hidden
   position: absolute
-  top: 3.5rem
-  left: 0
+  top: 5rem
   background-color: $initial
+  padding: .8rem 1.6rem
+  margin-top: -.3rem
+  margin-left: -5rem
   min-width: 16rem
+  list-style: none
+  opacity: 0
   border: .1rem solid $gray-lightest
-  border-radius:  $global-radius
+  border-radius: $global-radius
   box-shadow: 0 .4rem 1rem 0 rgba(0,0,0,.1)
-  a
-    color: $gray-lightest
-    padding: 1rem 1.6rem
-    font-size: 1.2rem
-    text-decoration: none
-    display: block
-    &:last-child
-      border-radius:  0 0 $global-radius $global-radius
-    &:hover
-      color: $primary
+  transition: visibility 0s 0.15s, opacity 0.15s, margin-top 0.15s;
+  li
+    margin: 0
+    a
+      color: $gray-lightest
+      padding: 1rem 0
+      text-decoration: none
+      display: block
+      &:hover
+        color: $primary
+
+.dropdown:hover .dropdown-content
+  visibility: visible
+  margin-top: 0
+  opacity: 1
+  transition-delay: 0s;
 
 .show
   display: block
